<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/status_view"
    android:visibility="gone">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/btn_live_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="35dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_shape"
                android:text="@string/title_live_data" />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/monitor_white_thin"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/btn_alaram_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="35dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:background="@drawable/edit_text_shape"
                android:text="@string/title_alarms"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/alarm_white_complete"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/btn_log_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="35dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:background="@drawable/edit_text_shape"
                android:text="@string/title_logs"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/folder_white"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/live_data_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ListView
            android:id="@+id/live_data_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <include
        layout="@layout/live_alarm_layout"/>
    <include
        layout="@layout/log_data_layout"/>
</LinearLayout>