<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/exicom_logo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_sign_in"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/title_login_message"
                    android:gravity="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:id="@+id/email"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/title_email_id"
                    android:background="@drawable/edit_text_shape"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:textAlignment="center"
                    android:id="@+id/password"
                    android:hint="@string/title_password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_shape"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:text="@string/title_sign_in"
                android:id="@+id/login"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:background="@drawable/button_shape"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.33"
                    android:background="#dddddd"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:textAlignment="center"
                    android:text="or register with"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.33"
                    android:background="#dddddd"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="20dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_google"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_facebook"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="0.5"
                    android:textAlignment="viewEnd"
                    android:text="Don't have an account?"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                <TextView
                    android:id="@+id/signup"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:text="Create one"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>